syntax = "proto3";

package hrms;
option go_package = "hrms/proto;hrms";

import "proto/designation.proto";

service EmployeeBenefitService {
  rpc CreateEmployeeBenefits(CreateEmployeeBenefitsRequest) returns (EmployeeBenefitsDTO);
  rpc GetEmployeeBenefits(GetEmployeeBenefitsRequest) returns (EmployeeBenefitsDTO);
  rpc UpdateEmployeeBenefits(UpdateEmployeeBenefitsRequest) returns (hrms.EmptyResponse);
  rpc DeleteEmployeeBenefits(DeleteEmployeeBenefitsRequest) returns (hrms.EmptyResponse);
  rpc ListEmployeeBenefits(ListEmployeeBenefitsRequest) returns (ListEmployeeBenefitsResponse);
}

message EmployeeBenefitsDTO {
  uint64 id = 1;
  uint64 employee_id = 2;
  string health_plan = 3;
  string retirement_plan = 4;
}

message CreateEmployeeBenefitsRequest {
  uint64 employee_id = 1;
  string health_plan = 2;
  string retirement_plan = 3;
}

message GetEmployeeBenefitsRequest {
  uint64 employee_id = 1;
}

message UpdateEmployeeBenefitsRequest {
  uint64 employee_id = 1;
  string health_plan = 2;
  string retirement_plan = 3;
}

message DeleteEmployeeBenefitsRequest {
  uint64 employee_id = 1;
}

message ListEmployeeBenefitsRequest {
  string health_plan = 1;
  string retirement_plan = 2;
}

message ListEmployeeBenefitsResponse {
  repeated EmployeeBenefitsDTO benefits = 1;
}

